# voice_open_sesame

./: .gitignore  check.ipynb  companionserver.py  pyproject.toml  requirements.txt  server.py  setup.sh  voiceprepare.py
app/: session.py  session_control.py
chatterbox_infer/: __init__.py  mtl_tts copy.py  mtl_tts.py  mtl_tts_stream.py  tts.py
chatterbox_infer/models/s3gen/: flow.py  flow_matching.py  s3gen.py
chatterbox_infer/models/s3gen/utils/: mask.py
chatterbox_infer/models/s3tokenizer/: __init__.py
chatterbox_infer/models/t3/: __init__.py  t3.py  t3no.py
chatterbox_infer/models/t3/inference/: alignment_stream_analyzer.py  t3_hf_backend copy.py  t3_hf_backend.py
chatterbox_infer/models/t3/inference/custom_llama/: modeling_llama.py
llm/: conversation.py  custom.py  grok.py  ollama.py  openai.py  utils.py
stt/: asr.py  openai.py  vad.py
third/smart_turn/: README.md  benchmark.py  inference.py  logger.py  train.py
third/zipvoice/models/: zipvoice.py
third/zipvoice/tokenizer/: tokenizer.py
tts/: chatter_infer.py  tokens.txt  zipvoice_infer.py
utils/: constants.py  opus.py  process.py  text_process.py  utils.py
